--- a/add.html
+++ b/add.html
@@ -30,43 +30,43 @@
                       <div class="form-group row">
                           <div class="col-sm-6">
                               <label for="inputFirstname">Name</label>
-                              <input type="text" class="form-control" id="name" placeholder="Name">
+                              <input type="text" class="form-control" id="name" placeholder="Name" required>
                           </div>
 
                           <div class="col-sm-6">
                               <label for="inputLastname">Color name</label>
-                              <input type="text" class="form-control" id="color" placeholder="Color">
+                              <input type="text" class="form-control" id="color" placeholder="Color" required>
                           </div>
                       </div>
 
                       <div class="form-group row">
                           <div class="col-sm-6">
                               <label for="inputContactNumber">Brand</label>
-                              <input type="text" class="form-control" id="brand" placeholder="Brand name">
+                              <input type="text" class="form-control" id="brand" placeholder="Brand name" required>
                           </div>
 
                           <div class="col-sm-6">
                               <label for="inputWebsite">Product type</label>
-                              <input type="text" class="form-control" id="product_type" placeholder="Mascara, lipstick, blush etc.">
+                              <input type="text" class="form-control" id="product_type" placeholder="Mascara, lipstick, blush etc." required>
                           </div>
                       </div>
 
                       <div class="form-group row">
                           <div class="col-sm-6">
                               <label for="inputContactNumber">Price</label>
-                              <input class="form-control" id="price" placeholder="Price in USD $">
+                              <input class="form-control" id="price" placeholder="Price in USD $" required>
                           </div>
 
                           <div class="col-sm-6">
                               <label for="inputWebsite">Note</label>
-                              <input type="text" class="form-control" id="note" placeholder="Optimal">
+                              <input type="text" class="form-control" id="note" placeholder="Optimal" required>
                           </div>
                       </div>
 
                       <div class="form-group row">
                           <div class="col-sm-12">
                               <label for="inputWebsite">Description</label>
-                              <input type="text" class="form-control" id="description" placeholder="Write something about your product here">
+                              <input type="text" class="form-control" id="description" placeholder="Write something about your product here" required>
                           </div>
                       </div>
 
