--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <nav class="navbar navbar-expand-md navbar-light">
     </nav>
-    <header class="hero_banner"></header>
+    <header class="hero_banner">Loading header ...</header>
     <section class="container">
         <h2>Featured</h2>
         <div class="row">Loading makeup products..</div>
