--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
     <section class="container">
         <a href="/">Home</a>
         <a href="products.html">Back to products</a>
-        <div class="row">Loading product...</div>
+        <div class="products row">Loading product...</div>
     </div>
   </div>
   <footer>
